--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,16 @@ on:
 env:
   PYTHON_VERSION: "3.11"
 
+permissions:
+  contents: read
+
 jobs:
   lint:
     name: Lint and Format Check
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: read
     steps:
       - uses: actions/checkout@v6
 
@@ -58,6 +64,9 @@ jobs:
   test:
     name: Run Tests
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: read
     
     services:
       redis:
@@ -116,6 +125,9 @@ jobs:
     name: Build Docker Images
     runs-on: ubuntu-latest
     needs: [lint, test]
+    permissions:
+      contents: read
+      actions: read
     strategy:
       matrix:
         queue_backend:
@@ -192,6 +204,9 @@ jobs:
     name: Integration Tests
     runs-on: ubuntu-latest
     needs: [build]
+    permissions:
+      contents: read
+      actions: read
     steps:
       - uses: actions/checkout@v6
 
@@ -234,6 +249,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     if: always()
+    permissions:
+      contents: read
+      actions: read
     steps:
       - name: Download image size artifacts
         uses: actions/download-artifact@v3
