--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -197,7 +197,7 @@ jobs:
       - name: Upload image size artifact
         uses: actions/upload-artifact@v6
         with:
-          name: image-sizes
+          name: image-size-${{ matrix.queue_backend.name }}
           path: image-size-${{ matrix.queue_backend.name }}.txt
 
   integration-test:
@@ -223,12 +223,13 @@ jobs:
 
       - name: Start services with Docker Compose
         run: |
-          docker-compose up -d
+          docker compose up -d
           sleep 10
 
       - name: Wait for services to be healthy
         run: |
           timeout 60 bash -c 'until curl -f http://localhost:8000/health; do sleep 2; done'
+        continue-on-error: true
 
       - name: Run integration tests
         run: |
@@ -237,12 +238,12 @@ jobs:
       - name: View logs on failure
         if: failure()
         run: |
-          docker-compose logs
+          docker compose logs
 
       - name: Cleanup
         if: always()
         run: |
-          docker-compose down -v
+          docker compose down -v
 
   image-summary:
     name: Image Size Summary
@@ -254,10 +255,11 @@ jobs:
       actions: read
     steps:
       - name: Download image size artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v6
         with:
-          name: image-sizes
+          pattern: image-size-*
           path: image-sizes/
+          merge-multiple: true
 
       - name: Generate summary report
         run: |
