--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,10 +103,11 @@ jobs:
 
       - name: Run unit tests
         env:
+          PYTHONPATH: ${{ github.workspace }}/src
           OPENHQM_QUEUE__REDIS_URL: redis://localhost:6379
           OPENHQM_CACHE__REDIS_URL: redis://localhost:6379
         run: |
-          pytest tests/ -v --cov=openhqm --cov-report=xml --cov-report=html --cov-report=term-missing
+          pytest tests/ -v --cov=src/openhqm --cov-report=xml --cov-report=html --cov-report=term-missing
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
@@ -259,7 +260,11 @@ jobs:
         with:
           pattern: image-size-*
           path: image-sizes/
-          merge-multiple: true
+
+      - name: Flatten artifact directory structure
+        run: |
+          find image-sizes -name '*.txt' -exec sh -c 'mv "$1" "image-sizes/$(basename "$1")"' _ {} \;
+          find image-sizes -mindepth 1 -type d -empty -delete
 
       - name: Generate summary report
         run: |
