chore: upgrade ruff to 0.15.0 and configure mypy for optional dependencies
- Update ruff from 0.1.11 to 0.15.0 in requirements-dev.txt
- Configure mypy to ignore missing imports for optional dependencies:
  - azure.* (Azure Event Hubs)
  - google.* (GCP Pub/Sub)
  - asyncio_mqtt.* (MQTT)
  - aiokafka.* (Kafka)
  - boto3.*, aioboto3.* (AWS SQS)
- Reformat settings.py with ruff 0.15.0 (Literal formatting change)
- All 27 unit tests still passing
- Reduces mypy errors from 60+ to ~50 (removes import-not-found errors)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,12 @@ module = [
     "redis.*",
     "prometheus_client.*",
     "structlog.*",
+    "azure.*",
+    "google.*",
+    "asyncio_mqtt.*",
+    "aiokafka.*",
+    "boto3.*",
+    "aioboto3.*",
 ]
 ignore_missing_imports = true
 
