--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
     "fastapi>=0.109.0",
@@ -83,7 +84,7 @@ exclude_lines = [
 
 [tool.ruff]
 line-length = 100
-target-version = "py311"
+target-version = "py313"
 src = ["src", "tests"]
 
 [tool.ruff.lint]
@@ -106,7 +107,7 @@ ignore = [
 "tests/**/*.py" = ["S101"]  # assert usage
 
 [tool.mypy]
-python_version = "3.11"
+python_version = "3.13"
 warn_return_any = false  # Too strict for dynamic code
 warn_unused_configs = true
 disallow_untyped_defs = false  # Relax for optional queue implementations
@@ -157,7 +158,7 @@ skips = ["B101"]  # assert_used
 
 [tool.black]
 line-length = 100
-target-version = ["py311"]
+target-version = ["py313"]
 include = '\.pyi?$'
 
 [tool.semantic_release]
