feat: Add routing and partitioning capabilities (#20)
* fix: update link to COMPOSABLE_PATTERNS.md for accurate documentation path

* fix: add CODECOV_TOKEN for secure coverage report upload

* Add routing and partitioning capabilities

- Implement routing engine with JQ, JSONPath, and template transforms
- Add partition manager for session affinity and horizontal scaling
- Support multiple routing strategies with priority-based matching
- Enable session-aware message distribution with sticky sessions
- Add header and query parameter mapping from message fields
- Support Kubernetes ConfigMap deployment for routing config
- Update worker implementation to support partition assignments
- Add comprehensive documentation and configuration examples
- Include unit tests for routing and partitioning modules
- Update SDD with detailed routing and partitioning design

* feat: enhance routing and partitioning capabilities with new configurations and helper functions

* fix: reconstruct processor.py with proper routing/partitioning integration

- Restored clean base from main branch
- Added routing engine initialization and integration
- Added partition manager with session affinity support
- Implemented partition-aware message processing
- Added set_partition_assignments() and get_partition_stats() methods
- Updated process() to handle routing transforms and partition filtering
- Fixed worker.py run_worker() function signature corruption

All 42 unit tests passing including 15 routing/partitioning tests.

* Add comprehensive unit tests for error handling, processor functionality, and worker behavior

- Introduced tests for error propagation including ConfigurationError, ProcessingError, and handling of retryable and fatal errors.
- Added edge case tests for empty payloads, large payloads, and invalid configurations.
- Implemented concurrency tests to ensure message processing and session management under load.
- Created comprehensive tests for MessageProcessor covering routin

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,8 @@ prometheus-client==0.19.0
 
 # Utilities
 python-dotenv==1.0.0
+
+# Routing and transformation
+# pyjq>=2.6.0  # Optional: JQ transforms (requires Python < 3.13, complex build dependencies)
+jsonpath-ng>=1.6.0
+pyyaml>=6.0.1
